testing/tests/ui/let_destructuring_has_rest.stderr
error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:21
         |
       2 | {%- if let X { a, .., } = x -%}hello {{ a }}{%- endif -%}
         |                     ^ close to this token
         |
 --> tests/ui/let_destructuring_has_rest.rs:8:10
  |
8 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `,` for more members, or `}` as terminator
 --> <source attribute>:2:18
  |
       2 | {%- if let X { a .. } = x -%}hello {{ a }}{%- endif -%}
         |                  ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:16:10
   |
16 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected member, or `}` as terminator
 --> <source attribute>:2:19
  |
       2 | {%- if let X { a, 1 } = x -%}hello {{ a }}{%- endif -%}
         |                   ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:24:10
   |
24 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:21
         |
       2 | {%- if let X { a, .., b } = x -%}hello {{ a }}{%- endif -%}
         |                     ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:32:10
   |
32 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected `,` character after `..`
       note that in a named struct, `..` must come last to ignore other members
        --> <source attribute>:2:18
         |
       2 | {%- if let X { .., b } = x -%}hello {{ a }}{%- endif -%}
         |                  ^ close to this token
         |
  --> tests/ui/let_destructuring_has_rest.rs:40:10
   |
40 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
